--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,6 @@
 /ClassBreackdown/.vs/ClassBreackdown/v16/Server/sqlite3/db.lock
 /ClassBreackdown/.vs/ClassBreackdown/v16/.suo
 /ClassBreackdown/.vs/ClassBreackdown/DesignTimeBuild/.dtbcache
+/TrajectorySimulation/.vs/TrajectorySimulation/v16/Server/sqlite3/storage.ide-wal
+/TrajectorySimulation/.vs/TrajectorySimulation/v16/Server/sqlite3/storage.ide-shm
+/Rollback/.vs/Rollback/DesignTimeBuild/.dtbcache
